# frontend-library-pbjt

./: .env.example  .env.production  .gitignore  DESKTOP-README.md  FRONTEND_INTEGRATION_GUIDE.md  INTEGRATION_QUICK_REF.md  QUICK-START-TAURI.md  README.md  TAURI-SETUP.md  TAURI-TODO.md  package-lock.json  package.json  start-tauri.ps1  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml  tauri-build.yml
public/: test-api.js
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src/app/providers/: QueryProvider.tsx
src/assets/: README.md
src/assets/icons/: .gitkeep
src/assets/images/: .gitkeep
src/components/layout/: AppShell.tsx  Breadcrumbs.tsx  Header.tsx  Sidebar.tsx  index.ts
src/components/ui/: Badge.tsx  BookSearchSelect.tsx  Button.tsx  Card.tsx  ConfirmationModal.tsx  Input.tsx  LoadingSpinner.tsx  Logo.tsx  Modal.tsx  Select.tsx  Table.tsx  index.ts
src/features/auth/components/: BrandPanel.tsx  LoginPage.tsx  RegisterPage.tsx
src/features/auth/schemas/: loginSchema.ts  registerSchema.ts
src/hooks/: usePreferences.ts
src/services/api/: admin.api.ts  auth.api.ts  books.api.ts  categories.api.ts  client.ts  index.ts  loans.api.ts  members.api.ts
src/services/constants/: categories.ts
src/services/mockData/: books.ts  index.ts  loans.ts  members.ts
src/services/utils/: delay.ts  filter.ts  pagination.ts
src/stores/: themeStore.ts  uiStore.ts
src/types/: admin.ts  book.ts  category.ts  index.ts  loan.ts  member.ts
src/utils/: cn.ts  dateFormatter.ts
(+34 files in other folders)
